package TicketService.Services;
import java.util.List;

import TicketService.User;
import TicketService.TicketClasses.Ticket;

public class TransactionService {
    public void makeTransaction(User user, List<Ticket> tickets) {
        // Логика для осуществления транзакции с указанным пользователем и списком билетов
    }
}